# Navitas-Rust-Bevy

./: .gitignore  Cargo.toml  commands
.github/workflows/: static.yml
src/: main.rs  main2.rs
tests/: wasm.rs  web.rs
